# MakeASound

./: .gitignore  CLAUDE.md  CMakeLists.txt
.github/workflows/: ci.yml
Apps/: CMakeLists.txt
Apps/Demo/: CMakeLists.txt  Main.cpp  Types.h
Apps/Demo/web/: app.js  index.html  package-lock.json  package.json  styles.css
Apps/Demo/web/src/: App.tsx  style.css
Apps/Example/: CMakeLists.txt  Example.cpp
Apps/MidiDemo/: CMakeLists.txt  MidiDemo.cpp
Apps/Synth/: AudioProcessor.h  CMakeLists.txt  Main.cpp  Synth.h  SynthUI.h  Types.h
Apps/Synth/web/: app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
Apps/Synth/web/src/: App.tsx  bridge.ts  main.tsx  style.css
CMake/: FindMagicEnum.cmake  FindMiniaudio.cmake  FindMiro.cmake  FindNlohmannJSON.cmake  FindRTAudio.cmake  FindRTMidi.cmake  Findea_data_structures.cmake  Findeacp.cmake
Demo/: CMakeLists.txt  Main.cpp
Demo/web/: app.js  index.html  styles.css
Example/: CMakeLists.txt  Example.cpp
Include/MakeASound/: DeviceInfo.h  DeviceManager.h  DeviceManagerImpl.h  MakeASound.h
Include/MakeASound/RTAudio/: RTAudio-Backend.h  RTAudio.h  RTAudioDeviceManager.h
Include/MakeASound/Serializing/: Serializing.h
Lib/: CMakeLists.txt
Lib/MakeASound/: MakeASound.cpp  MakeASound.h
Lib/MakeASound/Audio/: Buffer.h  Channel.h
Lib/MakeASound/BlockSizes/: BlockSizes.cpp  BlockSizes.h  BlockSizes.mm
Lib/MakeASound/Buffer/: Buffer.cpp  Buffer.h
Lib/MakeASound/Channel/: Channel.cpp
Lib/MakeASound/Common/: Algorithms.h  Common.h
Lib/MakeASound/DeviceInfo/: DeviceInfo.cpp  DeviceInfo.h
Lib/MakeASound/DeviceManager/: DeviceManager.cpp  DeviceManager.h
Lib/MakeASound/Devices/: BlockSizes.cpp  BlockSizes.h  DeviceInfo.cpp  DeviceInfo.h  DeviceManager.h
Lib/MakeASound/MIDI/: MIDI.cpp  MIDI.h  MidiBlockSync.cpp  MidiBlockSync.h  MidiInfo.h  MidiManager.cpp  MidiManager.h
Lib/MakeASound/MidiBlockSync/: MidiBlockSync.cpp  MidiBlockSync.h
Lib/MakeASound/MidiInfo/: MidiInfo.cpp  MidiInfo.h
Lib/MakeASound/MidiManager/: MidiManager.cpp  MidiManager.h
Lib/MakeASound/MiniAudio/: MiniAudio-Backend.cpp  MiniAudio-Backend.h  MiniAudioDeviceManager.cpp  MiniAudioDeviceManager.h
Lib/MakeASound/MiroEA/: MiroEA.h
Lib/MakeASound/RTAudio/: RTAudio-Backend.cpp  RTAudio-Backend.h  RTAudioDeviceManager.cpp  RTAudioDeviceManager.h
Lib/MakeASound/RTMidi/: RTMidi-Backend.cpp  RTMidi-Backend.h  RTMidiManager.cpp  RTMidiManager.h
Lib/MakeASound/Realtime/: SPSCQueue.h
Lib/MakeASound/UI/: Dropdown.cpp  Dropdown.h  UIDeviceManager.cpp  UIDeviceManager.h  UIMidiManager.cpp  UIMidiManager.h
